--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,18 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <script src="https://kit.fontawesome.com/d3f14c3d77.js" defer crossorigin="anonymous"></script>
 
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Carrois+Gothic&display=swap" rel="stylesheet">
+
+
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+  <!-- Font Awesome Icons -->
+
+  <script src="https://kit.fontawesome.com/d3f14c3d77.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
   <app-root></app-root>
